finished a little under half the traits, mostly the easy ones tho

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ out/production/TFT-Sim/Main.class
 out/production/TFT-Sim/Unit.class
 out/production/TFT-Sim/Unit_Data.class
 out/production/TFT-Sim/UnitImporter.class
+.idea/workspace.xml
