--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+TFT-Sim.iml
 out/production/TFT-Sim/units/Unit_Metadata.class
 out/production/TFT-Sim/units/Unit_Info.class
 out/production/TFT-Sim/units/Unit_Importer.class
@@ -13,13 +13,7 @@ out/production/TFT-Sim/main/Board.class
 out/production/TFT-Sim/Main.class
 out/production/TFT-Sim/Common_Variables.class
 out/production/TFT-Sim/Board.class
-.idea/workspace.xml
-.idea/uiDesigner.xml
-.idea/workspace.xml
-out/production/TFT-Sim/Board.class
-out/production/TFT-Sim/Common_Variables.class
-out/production/TFT-Sim/Main.class
-out/production/TFT-Sim/Unit.class
-out/production/TFT-Sim/Unit_Data.class
-out/production/TFT-Sim/UnitImporter.class
-.idea/workspace.xml
+.idea/*
+src/main/resources/
+src/test/
+target/
